--- a/part/distributed.tex
+++ b/part/distributed.tex
@@ -502,7 +502,9 @@ TPM на базе UNIX опирается на фундаментальное п
 
 \subsection{Протоколы фиксации}
 \paragraph{Протоколы фиксации}~\\
-
+Протоколы фиксации используются для обеспечения атомарности транзакций между сайтами.
+Транзакция, которая выполняется на нескольких сайтах, должна быть либо зафиксирована на всех сайтах, либо прервана на всех сайтах.
+Недопустимо, чтобы транзакция была зафиксирована на одном сайте и прервана на другом.
 В локальной системе базы данных для принятия транзакции диспетчер транзакций должен только передать решение
 о фиксации диспетчеру восстановления. Однако в распределенной системе диспетчер транзакций должен передать
 решение о фиксации всем серверам в различных сайтах, где выполняется транзакция, и обеспечить
@@ -517,7 +519,7 @@ TPM на базе UNIX опирается на фундаментальное п
     \item Двухфазный коммит
     \item Трехфазный коммит
 \end{itemize}
-
+Широко используется протокол двухфазной фиксации (2PC).
 \bigbreak
 \textbf{Распределенная однофазная фиксация}
 
@@ -589,6 +591,64 @@ TPM на базе UNIX опирается на фундаментальное п
         устройств, он считает транзакцию отмененной
     \end{itemize}
 
+\end{itemize}
+\textbf{Обработка отказов}
+
+Введём следующие обозначения: T -- транзакция, инициированная сайтом $S_i$, координатором которого выступает $C_i$.
+
+\begin{itemize}
+\item Отказ сайта
+
+Когда сайт восстанавливается, он просматривает свой журнал, чтобы определить судьбу транзакций, активных во время сбоя\autocite{Fixations}:
+\begin{itemize}
+\item Журнал содержит запись <commit T>: сайт выполняет переотправку (T)
+\item Журнал содержит запись <abort T>: сайт выполняет отмену (T)
+\item Журнал содержит запись <ready T>: сайт должен обратиться к $C_i$, чтобы определить судьбу T.
+\begin{itemize}
+\item Если T зафиксировано, повторить (T)
+\item Если Т прервано, отмена (Т).
+\end{itemize}
+\item Журнал не содержит никаких управляющих записей относительно ответов T что $S_k$ потерпел неудачу, прежде чем ответил на сообщение prepare T от $C_i$
+\begin{itemize}
+\item поскольку отказ $S_k$ исключает отправку такого ответа $C_1$ должен прервать T
+\item $S_k$ должен выполнить отмену (T)
+\end{itemize}
+\end{itemize}  
+
+\item Отказ координатора
+
+Если координатор вышел из строя во время выполнения протокола фиксации для T то участвующие сайты должны принять решение о дальнейшей судьбе T\autocite{Fixations}:
+\begin{itemize}
+\item Если активный сайт содержит запись <commit T> в своем журнале, то T должен быть зафиксирован.
+\item Если активный сайт содержит в своем журнале запись <abort T>, то T должен быть прерван.
+\item Если какой-либо активный участвующий сайт не содержит записи <ready T> в своем журнале, тогда отказавший координатор $C_i$ не может принять решение о фиксации T. Поэтому можно прервать T.
+\item Если ни один из вышеперечисленных случаев не подходит, то все активные сайты должны иметь запись <ready T> в своих журналах, но никаких дополнительных управляющих записей (таких как <abort T> из <commit T>). В этом случае активные сайты должны ждать, пока $C_i$ восстановится, чтобы найти решение.
+\item Проблема блокировки: активным сайтам, возможно, придется ждать, пока вышедший из строя координатора будет восстановлен.
+\end{itemize}
+\item Разделение сети
+
+Если координатор и все его участники остаются в одном разделе, отказ не влияет на протокол фиксации.\autocite{Fixations}
+Если координатор и его участники принадлежат к нескольким разделам:
+\begin{itemize}
+\item Сайты, которые не находятся в разделе, содержащем координатора считают, что координатор вышел из строя, и выполняют протокол, соответствующий случаю отказа координатора.
+
+\end{itemize}
+Координатор и сайты, находящиеся в том же разделе, что и координатор считают, что сайты в другом разделе отказали, и следуют обычному протоколу фиксации.
+
+
+\end{itemize}
+
+\bigbreak
+\textbf{Контролирование управления и параллелизма}
+
+В случае обработки in-doubt (т.е. таких, о которых в логах есть запись <ready T>, но нет ни <commit T>, ни <abort T>) транзакций восстанавливающий сайт должен определить её commit-abort статус контактируя с другими сайтами, что может замедлить и, возможно, заблокировать процесс востановления\autocite{Fixations}.
+
+Опишем основные принципы работы алгоритмов восстановления:
+\begin{itemize}
+    \item Алгоритмы могут записывать информацию о фиксациях в лог.
+    \item Вместо <ready T> вносится запись <ready T, L>, где L -- список фиксаций, удерживаемых транзакцие T при записи лога, причём фиксации чтения могут быть опущены.
+    \item Для каждой in-doubt транзакции T все фиксации, записанные в <ready T, L> запрашиваются снова.
+    \item После повторного получения фиксации обработка транзакции может быть продолжена, при этом фиксация/откат in-doubt транзакции выполняется параллельно с исполнением новых транзакций.
 \end{itemize}
 
 \bigbreak
