--- a/db.tex
+++ b/db.tex
@@ -9,11 +9,16 @@
 
 \begin{document}
 \maketitle
-\epigraph{Самый надежный в мире алгоритм \\
+\epigraph{
+	Самый надежный в мире алгоритм \\
 	Всегда делать исключительно то, что горит \\
 	В самый прекрасный последний момент \\
-	Ведь для самых важных дел в принципе лучше времени нет}{Anacondaz - Факап}
+	Ведь для самых важных дел в принципе лучше времени нет
+}{Anacondaz - Факап}
+
+\newpage
 \tableofcontents
+\newpage
 
 \renewcommand{\labelenumii}{\arabic{enumi}.\arabic{enumii}}
 \renewcommand{\labelenumiii}{\arabic{enumi}.\arabic{enumii}.\arabic{enumiii}}
@@ -30,5 +35,6 @@
 \input{part/intrusion}
 \input{part/security}
 % \input{part/ref}
+\newpage
 \printbibliography
 \end{document}
