Fix bibliography and images

--- a/part/concept.tex
+++ b/part/concept.tex
@@ -372,7 +372,8 @@
 
 \subsection{Аудит безопасности}
 
-Данный подразрадел является переводом и резюме 9 главы книги Database Security \autocite{DatabaseSecurity}.
+Аудит может быть интерпретирован различными способами. Во-первых, аудит может рассматриваться как непрерывный процесс, то есть, фактически, как мониторинг. Этот подход тщательно анализируется в главе 13 <<Аудит систем баз данных>> \autocite{Smirnov2007}.
+В рамках данного подраздела мы обсудим альтернативное понимание аудита, рассматривая его как конечный процесс. Данный подразрадел является переводом и резюме 9 главы книги <<Database Security>> \autocite{DatabaseSecurity}.
 
 \subsubsection{Определение}
 
@@ -401,22 +402,24 @@
 
 Из-за множества компонентов системы (например, файлов, серверов, приложений, данных) и методов (например, политик, межсетевых экранов, биометрии, шифрования), задействованных в обеспечении безопасности, практически невозможно провести аудит всей системы одновременно. Поэтому в разное время года для организации планируются несколько небольших аудитов безопасности, каждый из которых фокусируется только на определенной области. Обычная разбивка областей аудита безопасности включает в себя физическую безопасность, безопасность ОС, веб-приложений, веб-серверов, серверов БД, сетевого оборудования, политик и процедур.
 
-График проведения аудита может сильно измениться, если резко меняются приоритеты. Например, в таблице на Рис. 1 представлен возможный график аудита безопасности для организации. В первом столбце таблицы отображается исходный график аудита, а во втором столбце отображается тот же график после внесения корректировок из-за обнаружения уязвимости (возможной SQL-инъекции).
+График проведения аудита может сильно измениться, если резко меняются приоритеты. Например, в таблице на Рис. \ref{fig:Schedule_audit} представлен возможный график аудита безопасности для организации. В первом столбце таблицы отображается исходный график аудита, а во втором столбце отображается тот же график после внесения корректировок из-за обнаружения уязвимости (возможной SQL-инъекции).
 
 \begin{figure}[h!]
     \centering
     \includegraphics[width=0.8\textwidth]{assets/Schedule_audit}
     \caption{Пример графика проведения аудита}
+	\label{fig:Schedule_audit}
 \end{figure}
 
 \paragraph{2. Аудит.}
 
-На этом этапе подробный план аудита безопасности, составленный на предыдущем этапе, приводится в действие. Конкретные действия во время проведения аудита зависят от множества факторов, включая тип аудита, область аудита и организацию. Очевидно, что аудит, предназначенный для проверки физической безопасности, будет включать в себя совершенно иные действия, чем аудит, предназначенный для проверки администрирования СУБД. На Рис.2 в таблице показан список действий, которые обычно выполняются в процессе аудита для разных типов систем.
+На этом этапе подробный план аудита безопасности, составленный на предыдущем этапе, приводится в действие. Конкретные действия во время проведения аудита зависят от множества факторов, включая тип аудита, область аудита и организацию. Очевидно, что аудит, предназначенный для проверки физической безопасности, будет включать в себя совершенно иные действия, чем аудит, предназначенный для проверки администрирования СУБД. На Рис.\ref{fig:Common_actions_audit} в таблице показан список действий, которые обычно выполняются в процессе аудита для разных типов систем.
 
 \begin{figure}[h!]
     \centering
     \includegraphics[width=0.8\textwidth]{assets/Common_actions_audit}
     \caption{Пример обычных действий при проведении аудита}
+	\label{fig:Common_actions_audit}
 \end{figure}
 
 \paragraph{3. Отчет.}
@@ -429,7 +432,7 @@
 
 \paragraph{Подготовка и планирование аудита БД.}
 
-Подготовка к аудиту безопасности БД требует, чтобы аудитор собрал как можно больше информации об инфраструктуре БД для четкого определения периметра аудита. Периметр должен включать подробную информацию о людях, данных, технологиях и документах, которые будут играть роль в рамках конкретного аудита. На Рис. 3 представлен пример периметра аудита БД.
+Подготовка к аудиту безопасности БД требует, чтобы аудитор собрал как можно больше информации об инфраструктуре БД для четкого определения периметра аудита. Периметр должен включать подробную информацию о людях, данных, технологиях и документах, которые будут играть роль в рамках конкретного аудита. На Рис. \ref{fig:DB_audit_perimeter} представлен пример периметра аудита БД.
 
 Сбор информации включает в себя консультацию с администраторами БД, изучение схем баз данных, архитектуру сети, политик и процедур, связанных с БД. Часто организации имеют несколько СУБД, поэтому необходимо принять решение, сколько систем будет проверяться.
 
@@ -437,6 +440,7 @@
     \centering
     \includegraphics[width=0.8\textwidth]{assets/DB_audit_perimeter}
     \caption{Пример периметра аудита БД}
+	\label{fig:DB_audit_perimeter}
 \end{figure}
 
 На этом этапе также необходимо получить понимание функциональности, назначения и структуры всех используемых СУБД. Важна такая информация, как вендор СУБД, ОС функционирования СУБД, стратегия резервного копирования. Необходимо провести анализ данных на предмет связи с организационной иерархией, чтобы понять потребности сотрудников в хранении данных и манипулировании ими.
