modified:   bibliography.bib - добавление источников для пунктов 9.1; 9.2.1-9.2.3;  9.3 	modified:   part/security.tex - добавление источников для пунктов 9.1; 9.2.1-9.2.3; 9.3

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1009,3 +1009,37 @@
     urldate = {2024-06-09},
     year = {2023}
 }
+
+@book{GOST50939,
+	author    = {Федеральное агенство по техническому регулированию и метрологии},
+	title     = {{ГОСТ Р 56939-2016. Защита информации. Разработка безопасного программного обеспечения.}},
+	year      = 2016,
+	url       = {https://meganorm.ru/Data/626/62688.pdf}
+}
+
+@online{security-policy_13,
+	url     = {https://studfile.net/preview/9437402/page:13/},
+	title   = {{Сущность политики безопасности}},
+	urldate = {2024-09-30}
+}
+
+@online{security-policy_14,
+	url     = {https://studfile.net/preview/9437402/page:14/},
+	title   = {{Принципы построения защищенных систем баз данных}},
+	urldate = {2024-09-30}
+}
+
+@online{security-db,
+	url     = {http://www.hedge.forekc.ru/048/07-sistemy-upravlenija-bazami-dannyh.htm},
+	title   = {{Системы управления базами данных}},
+	urldate = {2024-09-30}
+}
+
+@article{Vorobyova,
+	author = {Воробьева Диана Евгеньевна},
+	journal = {I-methods},
+	number = {4},
+	year = {2023},
+	title = {{Формализация модели мониторинга защищенности работы СУБД SQL}},
+	url = {https://cyberleninka.ru/article/n/formalizatsiya-modeli-monitoringa-zaschischennosti-raboty-subd-sql}
+}
