--- a/part/security.tex
+++ b/part/security.tex
@@ -4,7 +4,7 @@
 
 \paragraph{Безопасное программное обеспечение}
 Безопасное программное обеспечение - программное обеспечение, разработанное с использованием совокупности
-мер, направленных на предотвращение появления и устранение уязвимостей программы.
+мер, направленных на предотвращение появления и устранение уязвимостей программы \autocite[с. 2]{GOST50939}.
 
 \paragraph{Правила безопасности}
 Политика безопасности — это совокупность норм и правил, определяющих принятые в организации меры по
@@ -17,7 +17,7 @@
 безопасности необходимо использовать (или разработать) некоторую формальную модель,
 которая допускает эффективное программирование на каком-либо формальном языке.
 Наибольшее распространение в настоящее время получили две базовые модели безопасности
-данных: дискреционная и мандатная.
+данных: дискреционная и мандатная \autocite{security-policy_13}.
 
 \subsection{Методология проектирования}
 
@@ -38,11 +38,11 @@
 должна обеспечить механизмы управления доступом, которые позволят защитить от несанкционированного доступа
 все связанные с СУБД файлы; кроме того, ОС предоставит средства для изоляции функций безопасности и защиты процессов СУБД.
 Однако в распределенной информационной системе уровень безопасности может поддерживаться не только средствами базовой ОС,
-но и архитектурно, путем разнесения компонентов СУБД по узлам сети и использования межсетевых экранов.
+но и архитектурно, путем разнесения компонентов СУБД по узлам сети и использования межсетевых экранов \autocite{security-db}.
 
 \subsubsection{Основные требования к безопасности СУБД}
 Можно выделить меры обеспечения безопасности СУБД зависящие и независящие от данных.
-\textbf{Не зависящими} от данных можно назвать следующие требования:
+\textbf{Не зависящими} от данных можно назвать следующие требования \autocite{LAPA}:
 \begin{itemize}
     \item \textbf{Функционирование в доверенной среде.}
     Под доверенной средой следует понимать инфраструктуру предприятия и ее защитные механизмы,
@@ -70,7 +70,7 @@
 
 \subsubsection{Независимые принципы целостности данных}
 В работах Кларка и Вильсона определены девять абстрактных теоретических принципов,
-выполнение которых позволит обеспечить целостность данных:
+выполнение которых позволит обеспечить целостность данных \autocite{Vorobyova}:
 \begin{itemize}
     \item \textbf{корректность транзакций;}
     По первому принципу данные могут изменяться только посредством «корректных» транзакций.
@@ -201,7 +201,7 @@ Access List для пользователей, имеющих доступ к т
 разумном методе измерения уровня защищенности этот уровень является неубывающей функцией
 от затрат на построение системы защиты. В любом практическом случае, когда существуют
 ограничения на бюджет системы защиты, существует и некоторый предельный уровень
-информационной безопасности, который теоретически может быть достигнут.
+информационной безопасности, который теоретически может быть достигнут  \autocite{security-policy_14}.
 
 В настоящее время отсутствует общепринятая методология разработки защищенных
 автоматизированных информационных систем и, в частности, систем баз данных. В подобных
@@ -209,11 +209,11 @@ Access List для пользователей, имеющих доступ к т
 решения некоторого класса проблем и формулировании руководящих принципов построения
 соответствующих систем, концентрирующих накопленный опыт. Именно таким образом для проблемы
 обеспечения безопасности информационных систем разрабатывался британский стандарт BS 7799
-и созданный на его основе международный стандарт ISO 17799.
+и созданный на его основе международный стандарт ISO 17799 \autocite{security-policy_13}.
 
 Анализ наиболее успешных решений в области обеспечения информационной безопасности баз данных
 позволил сформулировать несколько полезных принципов, которыми можно руководствоваться
-при проектировании систем защиты:
+при проектировании систем защиты \autocite{security-policy_13}:
 \begin{itemize}
 	\item \textbf{Экономическая оправданность механизмов защиты.}
         Предписывает использование простейшего из всевозможных вариантов проекта, который
