modified:   bibliography.bib -добавление источников в 9.3.4-9.3.6 	modified:   part/security.tex -добавление источников в 9.3.4-9.3.6

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1043,3 +1043,30 @@
 	title = {{Формализация модели мониторинга защищенности работы СУБД SQL}},
 	url = {https://cyberleninka.ru/article/n/formalizatsiya-modeli-monitoringa-zaschischennosti-raboty-subd-sql}
 }
+
+@online{design-db_6,
+	author = {доц. Оскерко В. С.},
+	url     = {https://bseu.by/it/tohod/lekcii4_6.htm},
+	title   = {{Проектирование базы данных: этапы проектирования базы данных и их процедуры}},
+	urldate = {2024-09-30}
+}
+
+@online{BANK,
+	url     = {https://bseu.by/it/tohod/praktikum_zfo_1_1.htm},
+	title   = {{ПРАКТИКУМ: концептуальное и логическое проектирование базы данных}},
+	urldate = {2024-09-30}
+}
+
+@online{design_db_4,
+	author = {доц. Оскерко В. С.},
+	url     = {https://bseu.by/it/tohod/lekcii4_4.htm},
+	title   = {{Проектирование базы данных: преобразование ER-модели в реляционную}},
+	urldate = {2024-09-30}
+}
+
+@online{design_db_5,
+	author = {доц. Оскерко В. С.},
+	url     = {https://bseu.by/it/tohod/lekcii4_5.htm},
+	title   = {{Проектирование базы данных: нормализация таблиц}},
+	urldate = {2024-09-30}
+}
