--- a/part/security.tex
+++ b/part/security.tex
@@ -209,11 +209,11 @@ Access List для пользователей, имеющих доступ к т
 решения некоторого класса проблем и формулировании руководящих принципов построения
 соответствующих систем, концентрирующих накопленный опыт. Именно таким образом для проблемы
 обеспечения безопасности информационных систем разрабатывался британский стандарт BS 7799
-и созданный на его основе международный стандарт ISO 17799 \autocite{security-policy_13}.
+и созданный на его основе международный стандарт ISO 17799 \autocite{security-policy_14}.
 
 Анализ наиболее успешных решений в области обеспечения информационной безопасности баз данных
 позволил сформулировать несколько полезных принципов, которыми можно руководствоваться
-при проектировании систем защиты \autocite{security-policy_13}:
+при проектировании систем защиты \autocite{security-policy_14}:
 \begin{itemize}
 	\item \textbf{Экономическая оправданность механизмов защиты.}
         Предписывает использование простейшего из всевозможных вариантов проекта, который
@@ -435,7 +435,7 @@ Access List для пользователей, имеющих доступ к т
 \subsubsection{Концептуальное проектирование}
 
 Цель этапа концептуального проектирования – создание концептуальной модели данных исходя из представлений
-пользователей о предметной области. Для ее достижения выполняется ряд последовательных процедур.
+пользователей о предметной области. Для ее достижения выполняется ряд последовательных процедур \autocite{design-db_6}.
 \begin{enumerate}
     \item \textbf{Определение сущностей и их документирование.}
         Для идентификации сущностей определяются объекты, которые существуют независимо от других. Такие объекты
@@ -496,7 +496,7 @@ Access List для пользователей, имеющих доступ к т
 
 Цель этапа логического проектирования – преобразование концептуальной модели на основе выбранной модели данных
 в логическую модель, не зависимую от особенностей используемой в дальнейшем СУБД для физической реализации базы
-данных. Для ее достижения выполняются следующие процедуры:
+данных. Для ее достижения выполняются следующие процедуры \autocite{design-db_6}:
 \begin{enumerate}
     \item \textbf{Выбор модели данных.}
         Чаще всего выбирается реляционная модель данных в связи с наглядностью табличного представления данных
@@ -509,7 +509,7 @@ Access List для пользователей, имеющих доступ к т
         механизма первичных и внешних ключей. Структуры таблиц и установленные связи между ними документируются.
 
         Изложим правила генерации таблиц из ER-диаграмм, используя пример ER-модели предметной
-        области БАНК, представленной на рис. 7, со следующими наборами атрибутов сущностей предметной области БАНК,
+        области БАНК \autocite{BANK}, представленной на рис. 7, со следующими наборами атрибутов сущностей предметной области БАНК,
         представленными на рис. 8.
 
     \begin{figure}[H]
@@ -526,7 +526,7 @@ Access List для пользователей, имеющих доступ к т
         \label{fig:mesh05}
     \end{figure}
 
-    Для связи типа 1:1 существуют три отдельных правила формирования предварительных таблиц из ER-диаграмм.
+    Для связи типа 1:1 существуют три отдельных правила формирования предварительных таблиц из ER-диаграмм \autocite{design_db_4}.
 
     \underline{Правило 1}
 
@@ -598,7 +598,7 @@ Access List для пользователей, имеющих доступ к т
     \end{figure}
 
     Для связи типа 1:М существуют только два правила. Выбор одного из них зависит от класса принадлежности
-    сущности на стороне M. Класс принадлежности сущности на стороне 1 не влияет на выбор.
+    сущности на стороне M. Класс принадлежности сущности на стороне 1 не влияет на выбор \autocite{design_db_4}.
 
     \underline{Правило 4}
 
@@ -649,7 +649,7 @@ Access List для пользователей, имеющих доступ к т
         \label{fig:mesh14}
     \end{figure}
 
-    Для связи типа М:N класс принадлежности сущности не имеет значения.
+    Для связи типа М:N класс принадлежности сущности не имеет значения \autocite{design_db_4}.
 
     \underline{Правило 6}
 
@@ -708,7 +708,7 @@ Access List для пользователей, имеющих доступ к т
     Оставшиеся таблицы А, С, D, F можно связать посредством связи первичных и внешних ключей.
     В результате получим реляционную модель для ER-модели предметной области БАНК.
 
-    \item \textbf{Нормализация таблиц.}
+    \item \textbf{Нормализация таблиц \autocite{design_db_5}.}
         Для правильного выполнения нормализации проектировщик должен глубоко изучить семантику и особенности
         использования данных. На этом шаге он проверяет корректность структуры таблиц, созданных на предыдущем
         шаге, посредством применения к ним процедуры нормализации. Она заключается в приведении каждой из таблиц,
@@ -823,7 +823,7 @@ Access List для пользователей, имеющих доступ к т
         \label{fig:mesh26}
     \end{figure}
 
-    \item \textbf{Проверка логической модели данных на предмет возможности выполнения всех транзакций, предусмотренных пользователями.}
+    \item \textbf{Проверка логической модели данных на предмет возможности выполнения всех транзакций, предусмотренных пользователями \autocite{design-db_6}.}
         Транзакция – это набор действий, выполняемых отдельным пользователем или прикладной программой с целью
         изменения содержимого базы данных. Так, примером транзакции в проекте БАНК может быть передача права
         распоряжаться счетами некоторого клиента другому клиенту. В этом случае в базу данных потребуется внести
@@ -838,7 +838,7 @@ Access List для пользователей, имеющих доступ к т
         то составленная логическая модель данных является неадекватной и содержит ошибки, которые надо устранить.
         Возможно, они связаны с пропуском в модели сущности, связи или атрибута.
 
-    \item \textbf{Определение требований поддержки целостности данных и их документирование.}
+    \item \textbf{Определение требований поддержки целостности данных и их документирование \autocite{design-db_6}.}
         Эти требования представляют собой ограничения, которые вводятся с целью предотвратить помещение в базу
         данных противоречивых данных. На этом шаге вопросы целостности данных освещаются безотносительно к
         конкретным аспектам ее реализации. Должны быть рассмотрены следующие типы ограничений:
@@ -858,7 +858,7 @@ Access List для пользователей, имеющих доступ к т
 
     Сведения обо всех установленных ограничениях целостности данных помещаются в словарь данных.
 
-    \item \textbf{Создание окончательного варианта логической модели данных и обсуждение его с пользователями.}
+    \item \textbf{Создание окончательного варианта логической модели данных и обсуждение его с пользователями \autocite{design-db_6}.}
         На этом шаге подготавливается окончательный вариант ER-модели, представляющей логическую модель данных.
         Сама модель и обновленная документация, включая словарь данных и реляционную схему связи таблиц,
         представляется для просмотра и анализа пользователям, которые должны убедиться, что она точно
@@ -870,7 +870,7 @@ Access List для пользователей, имеющих доступ к т
 Цель этапа физического проектирования – описание конкретной реализации базы данных, размещаемой во внешней
 памяти компьютера. Это описание структуры хранения данных и эффективных методов доступа к данным базы. При
 логическом проектировании отвечают на вопрос – что надо сделать, а при физическом – выбирается способ, как
-это сделать. Процедуры физического проектирования следующие:
+это сделать. Процедуры физического проектирования следующие \autocite{design-db_6}:
 \begin{enumerate}
     \item \textbf{Проектирование таблиц базы данных средствами выбранной СУБД.}
         Осуществляется выбор реляционной СУБД, которая будет использоваться для создания базы данных,
