modified:   bibliography.bib - добавление источников в 9.2.5, 9.3.3, 9.4 	modified:   part/security.tex - добавление источников в 9.2.5, 9.3.3, 9.4

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1019,7 +1019,7 @@
 
 @online{security-policy_13,
 	url     = {https://studfile.net/preview/9437402/page:13/},
-	title   = {{Сущность политики безопасности}},
+	title   = {{Политика безопасности}},
 	urldate = {2024-09-30}
 }
 
@@ -1070,3 +1070,21 @@
 	title   = {{Проектирование базы данных: нормализация таблиц}},
 	urldate = {2024-09-30}
 }
+
+@article{Glukharev,
+	author = {М. Л. Глухарёв},
+	journal = {Известия ПГУПС},
+	year = {2008},
+	title = {{РАЗРАБОТКА ПОКАЗАТЕЛЕЙ И МЕТОДОВ ОЦЕНИВАНИЯ КОРРЕКТНОСТИ РЕЛЯЦИОННЫХ БАЗ ДАННЫХ}},
+	url = {https://cyberleninka.ru/article/n/razrabotka-pokazateley-i-metodov-otsenivaniya-korrektnosti-relyatsionnyh-baz-dannyh}
+}
+
+@article{Rjaibi,
+	author = {Walid Rjaibi},
+	journal = {Conference: Proceedings of the 2004 conference of the Centre for Advanced Studies on Collaborative research},
+	number = {4},
+	year = {2004},
+	title = {{An introduction to multilevel secure relational database management systems}},
+	url = {https://www.researchgate.net/publication/221500703_An_introduction_to_multilevel_secure_relational_database_management_systems}
+}
+	
