--- a/part/security.tex
+++ b/part/security.tex
@@ -126,6 +126,9 @@
 Access List для пользователей, имеющих доступ к таблице, состояющий из UID пользователей.
 
 \subsubsection{Архитектура безопасной СУБД}
+
+Информация взята из \autocite{Rjaibi}
+
 Многоуровневые защищенные архитектуры РСУБД можно разделить на два общих типа, в зависимости от того,
 осуществляется ли принудительный контроль доступа самой РСУБД или делегируется доверенной операционной системе.
 Эти два основных типа - это архитектура Вудс-Холла и архитектура TrustedSubjects.
@@ -327,6 +330,8 @@ Access List для пользователей, имеющих доступ к т
 изменения рассматриваются, когда отдача значительна.
 
 \subsubsection{Требования и политики безопасности}
+
+Информация взята из \autocite{security-policy_13}
 
 Политика безопасности — это совокупность норм и правил, определяющих принятые в организации меры по обеспечению
 безопасности информации, связанной с деятельностью организации. Только человек, четко осознающий цели организации
@@ -858,7 +863,7 @@ Access List для пользователей, имеющих доступ к т
 
     Сведения обо всех установленных ограничениях целостности данных помещаются в словарь данных.
 
-    \item \textbf{Создание окончательного варианта логической модели данных и обсуждение его с пользователями \autocite{design-db_6}.}
+    \item \textbf{Создание окончательного варианта логической модели данных и обсуждение его с пользователями.}
         На этом шаге подготавливается окончательный вариант ER-модели, представляющей логическую модель данных.
         Сама модель и обновленная документация, включая словарь данных и реляционную схему связи таблиц,
         представляется для просмотра и анализа пользователям, которые должны убедиться, что она точно
@@ -911,6 +916,8 @@ Access List для пользователей, имеющих доступ к т
 Решения о внесении любых изменений в функционирующую базу данных должны быть обдуманными и всесторонне взвешенными.
 
 \subsection{Формальные верификации и спецификации}
+Информация взята из \autocite{Glukharev}
+
 Оценивание качества программного обеспечения информационных систем неразрывно связано с процессом верификации,
 т. е. с подтверждением того, что функциональные возможности ПО соответствуют их описаниям в программной документации
 (т.е. их спецификации). Функциональные возможности, которые не имеют описания в документации или не соответствуют
