Revert "	new file:   "assets/security/\321\201\320\262\321\217\320\267\321\214_m_n.jpg" - ER-диаграмма со связью многие ко многим"
This reverts commit 877ae84b8cdde97515e38979f5998c3a93404434.

--- a/part/security.tex
+++ b/part/security.tex
@@ -447,53 +447,17 @@ Access List для пользователей, имеющих доступ к т
         являются сущностями. Каждой сущности присваивается осмысленное имя, понятное пользователям. Имена и
         описания сущностей заносятся в словарь данных. Если возможно, то устанавливается ожидаемое количество
         экземпляров каждой сущности.
-        
-        Предположим, что проектируется база данных, предназначенная для хранения информации о деятельности некоторого банка. Этот банк
-        имеет филиалы. Филиалы управляются менеджерами. Клиенты имеют в филиалах счета разных типов – текущие, срочные, до востребования, депозитные, карточные.
-        Филиалы обрабатывают эти счета. Описываемую предметную область назовем БАНК, в ней могут быть выделены 4 сущности: ФИЛИАЛ, МЕНЕДЖЕР, СЧЕТ, КЛИЕНТ.
-        
-        - ФИЛИАЛ: номер филиала, адрес филиала;
-        
-        - МЕНЕДЖЕР: номер менеджера, стаж работы по специальности;
-        
-        - СЧЕТ: номер счета, тип счета, дата открытия счета, капитализация (Да/Нет), остаток на счете;
-        
-        - КЛИЕНТ: номер клиента, ФИО клиента, адрес клиента, подпись клиента.
 
     \item \textbf{Определение связей между сущностями и их документирование.}
         Определяются только те связи между сущностями, которые необходимы для удовлетворения требований к проекту
         базы данных. Устанавливается тип каждой из них. Выявляется класс принадлежности сущностей. Связям
         присваиваются осмысленные имена, выраженные глаголами. Развернутое описание каждой связи с указанием ее
         типа и класса принадлежности сущностей, участвующих в связи, заносится в словарь данных.
-        
-        В рассматриваемой предметной области БАНК можно выделить 3 связи:
-        
-        - МЕНЕДЖЕР управляет ФИЛИАЛом
-        
-        - ФИЛИАЛ обрабатывает СЧЕТ
-        
-        - КЛИЕНТ имеет СЧЕТ
 
     \item \textbf{Создание ER-модели предметной области.}
         Для представления сущностей и связей между ними используются ER-диаграммы. На их основе создается единый
         наглядный образ моделируемой предметной области – ER-модель предметной области.
-        
-        На диаграмме сущность изображается прямоугольником, в
-        котором указывается ее имя. А связь ромбом. Так же важен тип связи(1:1, 1:M, M:N). Рассмотрим их подробнее:
-        
-        - 1:1(один к одному): примером такой связи служит "МЕНЕДЖЕР управляет ФИЛИАЛом", так как МЕНЕДЖЕР управляет только одним ФИЛИАЛом, а ФИЛИАЛ имеет только одного МЕНЕДЖЕРа;
-        
-        - 1:M(один ко многим): примером такой связи служит "ФИЛИАЛ  обрабатывает СЧЕТ", так как СЧЕТ обрабатывается только одним ФИЛИАЛом, а ФИЛИАЛ может обрабатывать более одного СЧЕТа;
-        
-        - M:N(многие ко многим): примером такой связи служит "КЛИЕНТ ИМЕЕТ СЧЕТ", так как СЧЕТ может быть совместным и им могут пользоваться сразу несколько КЛИЕНТов, а КЛИЕНТ может завести более одного СЧЕТа;
-        
-        \begin{figure}[H]
-        	\centering
-        	\includegraphics[width=0.8\textwidth]{assets/security/связь_m_n.jpg}
-        	\caption{Пример ER-модели предметной области БАНК}
-        	\label{fig:mesh04}
-        \end{figure}
-        
+
     \item \textbf{Определение атрибутов и их документирование.}
         Выявляются все атрибуты, описывающие сущности созданной ER-модели. Каждому атрибуту присваивается осмысленное
         имя, понятное пользователям. О каждом атрибуте в словарь данных помещаются следующие сведения:
@@ -928,75 +892,15 @@ Access List для пользователей, имеющих доступ к т
         документации.
 
     \item \textbf{Проектирование физической организации базы данных.}
-        На этом шаге выбирается наилучшая файловая организация для таблиц. 
-        
-        Выполняется \textbf{проектирование транзакций} \autocite[сс. 12-13]{30333} :
-        
-        Цель проектирования транзакций заключается в определении и
-        документировании высокоуровневых характеристик всех транзакций,
-        которые должны будут выполняться в разрабатываемой базе данных. Эту
-        работу следует выполнить еще на начальной стадии проектирования, что
-        позволит обеспечить поддержку всех требуемых транзакций со стороны
-        логической модели данных. При этом очень важно, чтобы характеристики
-        всех транзакций были зафиксированы в документации. Существует
-        несколько методов описания высокоуровневых характеристик транзакций.
-        Наиболее важные из них следующие:
-        
-        – данные, которые используются транзакцией;
-        
-        – функциональные характеристики транзакции;
-        
-        – выходные данные, формируемые транзакцией;
-        
-        – степень важности транзакции для пользователей;
-        
-        – предполагаемая интенсивность использования. 
-        
-        Для того чтобы разрабатываемый физический проект базы данных
-        обладал требуемым уровнем эффективности, необходимо получить
-        максимум сведений о тех транзакциях, которые будут выполняться в
-        проектируемой базе данных. Для этого потребуются как качественные, так и
-        количественные характеристики. Для каждой транзакции необходимо знать
-        следующее:
-        
-        — транзакции, выполняемые наиболее часто и оказывающие
-        существенное влияние на производительность;
-        
-        — транзакции, наиболее важные для работы организации;
-        
-        — периоды времени на протяжении суток/недель, в которые нагрузка
-        базы данных возрастает до максимума (называемые периодами пиковой
-        нагрузки);
-        
-        — ожидаемая частота выполнения транзакций;
-        
-        — отношения и атрибуты, к которым потребуется иметь доступ при
-        выполнении транзакции, а также тип этого доступа;
-        
-        — ограничения, устанавливаемые на время выполнения транзакций.
-        
-        СУБД, созданная для поддержки оперативной обработки транзакций,
-        называется OLTP-системой (Online Transaction Processing). Обычно OLTPсистемы проектируются с целью обеспечения максимально интенсивной
-        обработки транзакций.
-        
-        На основании указанных показателей принимаются решения об оптимизации производительности базы данных путем определения индексов
+        На этом шаге выбирается наилучшая файловая организация для таблиц. Выявляются транзакции, которые
+        будут выполняться в проектируемой базе данных, и выделяются наиболее важные из них. Анализируется
+        пропускная способность транзакций – количество транзакций, которые могут быть обработаны за заданный
+        интервал времени, и время ответа – промежуток времени, необходимый для выполнения одной транзакции.
+        Стремятся к повышению пропускной способности транзакций и уменьшению времени ответа. На основании указанных
+        показателей принимаются решения об оптимизации производительности базы данных путем определения индексов
         в таблицах, ускоряющих выборку данных из базы, или снижения требований к уровню нормализации таблиц.
         Проводится оценка дискового объема памяти, необходимого для размещения создаваемой базы данных.
         Стремятся к его минимизации. Принятые решения по изложенным вопросам документируются.
-        
-		При этом стоит понимать, что индексы занимают место в БД. При вводе новых данных или удалении
-		данных СУБД приходится обновлять и таблицы, и индексы. Это может
-		замедлить выполнение операций модификации данных, особенно для таблиц
-		с большим числом строк, как в ХД. Таким образом, может появиться
-		проблема, суть которой состоит в возникновении конфликта между
-		скоростью обновления данных в таблице и скоростью ее считываний. При
-		разрешении этой проблемы следует придерживаться следующего
-		эмпирического правила: создавать индексы для колонок первичных ключей и
-		других колонок, часто используемых в тех запросах, в которых для выборки
-		данных применяются логические критерии. Если в результате скорость
-		обновления данных ухудшается, то можно рассмотреть вопрос об удалении
-		некоторых индексов \autocite [с. 15]{30333}.
-        
 
     \item \textbf{Разработка стратегии защиты базы данных.}
         База данных представляет собой ценный корпоративный ресурс, и организации ее защиты уделяется большое
