modified:   bibliography.bib - удалила недостоверные источники 	modified:   part/security.tex - удалила недостоверные источники

--- a/part/security.tex
+++ b/part/security.tex
@@ -17,7 +17,7 @@
 безопасности необходимо использовать (или разработать) некоторую формальную модель,
 которая допускает эффективное программирование на каком-либо формальном языке.
 Наибольшее распространение в настоящее время получили две базовые модели безопасности
-данных: дискреционная и мандатная \autocite{security-policy_13}.
+данных: дискреционная и мандатная.
 
 \subsection{Методология проектирования}
 
@@ -38,7 +38,7 @@
 должна обеспечить механизмы управления доступом, которые позволят защитить от несанкционированного доступа
 все связанные с СУБД файлы; кроме того, ОС предоставит средства для изоляции функций безопасности и защиты процессов СУБД.
 Однако в распределенной информационной системе уровень безопасности может поддерживаться не только средствами базовой ОС,
-но и архитектурно, путем разнесения компонентов СУБД по узлам сети и использования межсетевых экранов \autocite{security-db}.
+но и архитектурно, путем разнесения компонентов СУБД по узлам сети и использования межсетевых экранов.
 
 \subsubsection{Основные требования к безопасности СУБД}
 Можно выделить меры обеспечения безопасности СУБД зависящие и независящие от данных.
@@ -204,7 +204,7 @@ Access List для пользователей, имеющих доступ к т
 разумном методе измерения уровня защищенности этот уровень является неубывающей функцией
 от затрат на построение системы защиты. В любом практическом случае, когда существуют
 ограничения на бюджет системы защиты, существует и некоторый предельный уровень
-информационной безопасности, который теоретически может быть достигнут  \autocite{security-policy_14}.
+информационной безопасности, который теоретически может быть достигнут.
 
 В настоящее время отсутствует общепринятая методология разработки защищенных
 автоматизированных информационных систем и, в частности, систем баз данных. В подобных
@@ -212,11 +212,11 @@ Access List для пользователей, имеющих доступ к т
 решения некоторого класса проблем и формулировании руководящих принципов построения
 соответствующих систем, концентрирующих накопленный опыт. Именно таким образом для проблемы
 обеспечения безопасности информационных систем разрабатывался британский стандарт BS 7799
-и созданный на его основе международный стандарт ISO 17799 \autocite{security-policy_14}.
+и созданный на его основе международный стандарт ISO 17799.
 
 Анализ наиболее успешных решений в области обеспечения информационной безопасности баз данных
 позволил сформулировать несколько полезных принципов, которыми можно руководствоваться
-при проектировании систем защиты \autocite{security-policy_14}:
+при проектировании систем защиты:
 \begin{itemize}
 	\item \textbf{Экономическая оправданность механизмов защиты.}
         Предписывает использование простейшего из всевозможных вариантов проекта, который
@@ -331,8 +331,6 @@ Access List для пользователей, имеющих доступ к т
 
 \subsubsection{Требования и политики безопасности}
 
-Информация взята из \autocite{security-policy_13}
-
 Политика безопасности — это совокупность норм и правил, определяющих принятые в организации меры по обеспечению
 безопасности информации, связанной с деятельностью организации. Только человек, четко осознающий цели организации
 и условия ее функционирования, может определить, какую информацию необходимо защищать и насколько существенными
@@ -440,7 +438,7 @@ Access List для пользователей, имеющих доступ к т
 \subsubsection{Концептуальное проектирование}
 
 Цель этапа концептуального проектирования – создание концептуальной модели данных исходя из представлений
-пользователей о предметной области. Для ее достижения выполняется ряд последовательных процедур \autocite{design-db_6}.
+пользователей о предметной области. Для ее достижения выполняется ряд последовательных процедур.
 \begin{enumerate}
     \item \textbf{Определение сущностей и их документирование.}
         Для идентификации сущностей определяются объекты, которые существуют независимо от других. Такие объекты
@@ -501,7 +499,7 @@ Access List для пользователей, имеющих доступ к т
 
 Цель этапа логического проектирования – преобразование концептуальной модели на основе выбранной модели данных
 в логическую модель, не зависимую от особенностей используемой в дальнейшем СУБД для физической реализации базы
-данных. Для ее достижения выполняются следующие процедуры \autocite{design-db_6}:
+данных. Для ее достижения выполняются следующие процедуры:
 \begin{enumerate}
     \item \textbf{Выбор модели данных.}
         Чаще всего выбирается реляционная модель данных в связи с наглядностью табличного представления данных
@@ -514,7 +512,7 @@ Access List для пользователей, имеющих доступ к т
         механизма первичных и внешних ключей. Структуры таблиц и установленные связи между ними документируются.
 
         Изложим правила генерации таблиц из ER-диаграмм, используя пример ER-модели предметной
-        области БАНК \autocite{BANK}, представленной на рис. 7, со следующими наборами атрибутов сущностей предметной области БАНК,
+        области БАНК, представленной на рис. 7, со следующими наборами атрибутов сущностей предметной области БАНК,
         представленными на рис. 8.
 
     \begin{figure}[H]
@@ -531,7 +529,7 @@ Access List для пользователей, имеющих доступ к т
         \label{fig:mesh05}
     \end{figure}
 
-    Для связи типа 1:1 существуют три отдельных правила формирования предварительных таблиц из ER-диаграмм \autocite{design_db_4}.
+    Для связи типа 1:1 существуют три отдельных правила формирования предварительных таблиц из ER-диаграмм.
 
     \underline{Правило 1}
 
@@ -603,7 +601,7 @@ Access List для пользователей, имеющих доступ к т
     \end{figure}
 
     Для связи типа 1:М существуют только два правила. Выбор одного из них зависит от класса принадлежности
-    сущности на стороне M. Класс принадлежности сущности на стороне 1 не влияет на выбор \autocite{design_db_4}.
+    сущности на стороне M. Класс принадлежности сущности на стороне 1 не влияет на выбор.
 
     \underline{Правило 4}
 
@@ -654,7 +652,7 @@ Access List для пользователей, имеющих доступ к т
         \label{fig:mesh14}
     \end{figure}
 
-    Для связи типа М:N класс принадлежности сущности не имеет значения \autocite{design_db_4}.
+    Для связи типа М:N класс принадлежности сущности не имеет значения.
 
     \underline{Правило 6}
 
@@ -713,7 +711,7 @@ Access List для пользователей, имеющих доступ к т
     Оставшиеся таблицы А, С, D, F можно связать посредством связи первичных и внешних ключей.
     В результате получим реляционную модель для ER-модели предметной области БАНК.
 
-    \item \textbf{Нормализация таблиц \autocite{design_db_5}.}
+    \item \textbf{Нормализация таблиц.}
         Для правильного выполнения нормализации проектировщик должен глубоко изучить семантику и особенности
         использования данных. На этом шаге он проверяет корректность структуры таблиц, созданных на предыдущем
         шаге, посредством применения к ним процедуры нормализации. Она заключается в приведении каждой из таблиц,
@@ -828,7 +826,7 @@ Access List для пользователей, имеющих доступ к т
         \label{fig:mesh26}
     \end{figure}
 
-    \item \textbf{Проверка логической модели данных на предмет возможности выполнения всех транзакций, предусмотренных пользователями \autocite{design-db_6}.}
+    \item \textbf{Проверка логической модели данных на предмет возможности выполнения всех транзакций, предусмотренных пользователями.}
         Транзакция – это набор действий, выполняемых отдельным пользователем или прикладной программой с целью
         изменения содержимого базы данных. Так, примером транзакции в проекте БАНК может быть передача права
         распоряжаться счетами некоторого клиента другому клиенту. В этом случае в базу данных потребуется внести
@@ -843,7 +841,7 @@ Access List для пользователей, имеющих доступ к т
         то составленная логическая модель данных является неадекватной и содержит ошибки, которые надо устранить.
         Возможно, они связаны с пропуском в модели сущности, связи или атрибута.
 
-    \item \textbf{Определение требований поддержки целостности данных и их документирование \autocite{design-db_6}.}
+    \item \textbf{Определение требований поддержки целостности данных и их документирование.}
         Эти требования представляют собой ограничения, которые вводятся с целью предотвратить помещение в базу
         данных противоречивых данных. На этом шаге вопросы целостности данных освещаются безотносительно к
         конкретным аспектам ее реализации. Должны быть рассмотрены следующие типы ограничений:
@@ -875,7 +873,7 @@ Access List для пользователей, имеющих доступ к т
 Цель этапа физического проектирования – описание конкретной реализации базы данных, размещаемой во внешней
 памяти компьютера. Это описание структуры хранения данных и эффективных методов доступа к данным базы. При
 логическом проектировании отвечают на вопрос – что надо сделать, а при физическом – выбирается способ, как
-это сделать. Процедуры физического проектирования следующие \autocite{design-db_6}:
+это сделать. Процедуры физического проектирования следующие:
 \begin{enumerate}
     \item \textbf{Проектирование таблиц базы данных средствами выбранной СУБД.}
         Осуществляется выбор реляционной СУБД, которая будет использоваться для создания базы данных,
